# CSE125

./: .gitignore  CMakeLists.txt  CSE125.sln  CSE167.vcxproj  CSE167.vcxproj.filters  soil2-debug.idb
Client/: Client.vcxproj  Client.vcxproj.filters
Client/source/: ActivatorRegistrator.cpp  ActivatorRegistrator.h  ClientLoop.cpp  ClientLoop.h  ClientManager.cpp  ClientManager.h  ClientSidePredictor.cpp  ClientSidePredictor.h  ClientStartingScreen.cpp  ClientStartingScreen.h  FPSMovement.cpp  FPSMovement.h  Main.cpp  MainMenu.cpp  MainMenu.h
Engine/: CSE167.vcxproj  CSE167.vcxproj.filters  Config.cpp  Config.h
Engine/source/: Animation.cpp  BloomPass.cpp  BoxCollider.cpp  Camera.cpp  CapsuleCollider.cpp  ClientManager.cpp  ClientNetwork.cpp  CollisionInfo.cpp  Component.cpp  Config.cpp  Crosshair.cpp  DeferredPass.cpp  FileWatcher.cpp  ForwardPass.cpp  Framebuffer.cpp  GPUEmitter.cpp  GameObject.cpp  Input.cpp  Light.cpp  LoadingScreen.cpp  Main.cpp  Material.cpp  (+31 more)
Game/: Game.vcxproj  Game.vcxproj.filters
ModelViewer/: ModelViewer.vcxproj
assets/: Cell.mat.ini  CellDecorations.mat.ini  Corridor.mat.ini  CorridorConnector.mat.ini  CorridorFloor.mat.ini  CorridorPuzzle.mat.ini  Credits.psd  Door.mat.ini  Emitter.mat.ini  Metal.mat.ini  PressurePlate.mat.ini  PrisonFarWall.mat.ini  PrisonGrates.mat.ini  PrisonMaintainance.mat.ini  PrisonPanels.mat.ini  PrisonWall.mat.ini  WhiteLight.mat.ini  button_mat.mat.ini  laser.mat.ini
config/: buttons.ini  options.ini  sounds.ini
shaders/: cube_map.geom  cube_map.vert  deferred_gbuffer.frag  deferred_lighting.frag  deferred_lighting.vert  emissive.frag  fbo_hdr.frag  fbo_pass.frag  forward_pbr.frag  forward_pbr.vert  geom_pass.glsl  lighting.glsl  linear_depth.frag  shadow_cube.frag  simple.frag  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag  ui.frag  ui.vert
source/: Animation.cpp  BoxCollider.cpp  DeferrerdPass.cpp  ForwardPass.cpp  GameObject.cpp  Light.cpp  Main.cpp  Material.cpp  ObjectLoader.cpp  ParticleTrail.cpp  Renderer.cpp  Shader.cpp  Skybox.cpp  SkyboxPass.cpp  Sound.cpp  Texture.cpp  Util.cpp
(+134 files in other folders)
